<resources>
    <string name="app_name">Storm Queen Rank</string>
    <string name="button_send">Save</string>
    <string name="Result_label">Win/Loss</string>
    <string name="Kills_label">KILLS</string>
    <string name="Deaths_label">DEATHS</string>
    <string name="Assists_label">ASSISTS</string>
    <string name="CS_label">CS</string>
    <string name="gold_label">GOLD</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_game">New Game</string>
    <string name="update">Update</string>
    <string name="newgamesave">Save</string>
    <string name="skill_tier_title">SKILL TIER</string>
    <string name="skill_tier">GOT SWAGGER</string>
    <string name="wins_total">500</string>
    <string name="wins_total_lbl">WINS</string>
    <string name="losses_total">100</string>
    <string name="losses_total_lbl">LOSSES</string>
    <string name="games_total">600</string>
    <string name="games_total_lbl">GAMES</string>
    <string name="kda_value">7.3</string>
    <string name="kda_lbl">KDA</string>
    <string name="kda_title">K/D/A</string>
    <string name="best_hero_button">BEST HEROES PERFORMANCE</string>
    <string name="btn1kda">LAST10</string>
    <string name="btn2kda">WEEKLY</string>
    <string name="btn3kda">SEASON</string>
    <string name="win_lbl">WIN</string>
    <string name="loss_lbl">LOSS</string>
    <string name="kills_value">7</string>
    <string name="deaths_value">2</string>
    <string name="assists_value">8</string>
    <string name="cs_value">101</string>
    <string name="gold_value">9560</string>
    <string name="time_value">18:50</string>
    <string name="lanebtn">LANE</string>
    <string name="junglebtn">JUNGLE</string>
    <string name="roambtn">ROAM</string>
    <string name="overall_title">OVERALL</string>
    <string name="heroes_title">HEROES</string>
    <string name="recent_games_title">RECENT GAMES</string>
    <string name="roles_title">ROLES</string>
    <string name="winratio_value">50%</string>
    <string name="win_ratio_lbl">WIN RATIO</string>
    <string name="average_title">AVERAGE</string>
    <string name="killpart_value">80%</string>
    <string name="killpart_lbl">KILL PART.</string>

    <string name="bycsbtn">by CS</string>
    <string name="bykdaratiobtn">by KDA RATIO</string>
    <string name="bywinratiobtn">by WIN RATIO</string>
    <string name="bygoldbtn">by GOLD</string>
    <string name="edit_kills">enter kills</string>
    <string name="edit_deaths">enter deaths</string>
    <string name="edit_assists">enter assists</string>
    <string name="edit_cs">enter cs</string>
    <string name="edit_gold">gold</string>
    <string name="edit_total_kills">enter team kills</string>
    <string name="Total_Kills_label">Team kills</string>
    <string name="game_time_label">time</string>
    <string name="edit_mintimegame">min</string>
    <string name="edit_sectimegame">secs</string>
    <string name="Queue_label">Queue</string>
    <string name="Role_label">Role</string>
    <string name="Hero_label">Hero</string>
    <string name="laneplayed">Lane</string>
    <string name="jungleplayed">Jungle</string>
    <string name="roamplayed">Roam</string>
    <string name="casualqueue">Casual</string>
    <string name="rankedqueue">Ranked</string>
    <string name="nextbtn">Next &gt;&gt;</string>
    <string name="backbtn">&lt;&lt; Back</string>
    <string name="addgametbtn">Add Game</string>
    <string name="timesymbol">:</string>

    <string name="kdacell1albl"></string>
    <string name="kdacell1aval"></string>
    <string name="kdacell1blbl"></string>
    <string name="kdacell1bval"></string>


    <string-array name="Heroes_name">
        <item>Adagio</item>
        <item>Ardan</item>
        <item>Blackfeather</item>
        <item>Catherine</item>
        <item>Celeste</item>
        <item>Fortress</item>
        <item>Glaive</item>
        <item>Joule</item>
        <item>Kestrel</item>
        <item>Koshka</item>
        <item>Krul</item>
        <item>Petal</item>
        <item>Phinn</item>
        <item>Reim</item>
        <item>Ringo</item>
        <item>Rona</item>
        <item>Samuel</item>
        <item>Saw</item>
        <item>Skaarf</item>
        <item>Skye</item>
        <item>Taka</item>
        <item>Vox</item>
        <item>Lance</item>
        <item>Lyra</item>
        <item>Ozo</item>
        <item>Alpha</item>
        <item>Gwen</item>
        <item>Baron</item>
    </string-array>


    <!--HEROES-->

    <string name="adagio" translatable="false">Adagio</string>
    <string name="ardan" translatable="false">Ardan</string>
    <string name="blackfeather" translatable="false">Blackfeather</string>
    <string name="catherine" translatable="false">Catherine</string>
    <string name="celeste" translatable="false">Celeste</string>
    <string name="fortress" translatable="false">Fortress</string>
    <string name="glaive" translatable="false">Glaive</string>
    <string name="joule" translatable="false">Joule</string>
    <string name="kestrel" translatable="false">Kestrel</string>
    <string name="koshka" translatable="false">Koshka</string>
    <string name="krul" translatable="false">Krul</string>
    <string name="petal" translatable="false">Petal</string>
    <string name="phinn" translatable="false">Phinn</string>
    <string name="reim" translatable="false">Reim</string>
    <string name="ringo" translatable="false">Ringo</string>
    <string name="rona" translatable="false">Rona</string>
    <string name="samuel" translatable="false">Samuel</string>
    <string name="saw" translatable="false">Saw</string>
    <string name="skaarf" translatable="false">Skaarf</string>
    <string name="skye" translatable="false">Skye</string>
    <string name="taka" translatable="false">Taka</string>
    <string name="vox" translatable="false">Vox</string>
    <string name="lance" translatable="false">Lance</string>
    <string name="lyra" translatable="false">Lyra</string>
    <string name="ozo" translatable="false">Ozo</string>
    <string name="alpha" translatable="false">Alpha</string>
    <string name="Gwen" translatable="false">Gwen</string>
    <string name="Baron" translatable="false">Baron</string>

    <!--POSITIONS-->

    <string name="lane">Lane</string>
    <string name="jungle">Jungle</string>
    <string name="roam">Roam</string>
    <string name="all">All</string>

    <!--TIERS-->

    <string name="tier_1">Just Beginning</string>
    <string name="tier_2">Getting There</string>
    <string name="tier_3">Rock Solid</string>
    <string name="tier_4">Worthy Foe</string>
    <string name="tier_5">Got Swagger</string>
    <string name="tier_6">Credible Threat</string>
    <string name="tier_7">The Hotness</string>
    <string name="tier_8">Simply Amazing</string>
    <string name="tier_9">Pinnacle of Awesome</string>
    <string name="tier_10">Vainglorious</string>

    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>

    <!--GAME TYPES-->

    <string name="casual_type">Casual</string>
    <string name="ranked_type">Ranked</string>
    <string name="private_type">Private</string>
    <string name="tournament_type">Tournament</string>

    <string name="number1">1</string>
    <string name="number6">6</string>
    <string name="number3">3</string>
    <string name="number0">0</string>
    <string name="number8">8</string>
    <string name="number5">5</string>
    <string name="number2">2</string>
    <string name="number9">9</string>
    <string name="number7">7</string>
    <string name="number4">4</string>
    <string name="delete">&lt;-</string>
    <string name="IGN">in game name</string>
    <string name="game_result">game result</string>
    <string name="role_played">role</string>
    <string name="kda_game">1/1/1</string>
    <string name="kda_detail">kda detail</string>
    <string name="winratio_detail">win ratio detail</string>
    <string name="hero_detail">hero detail</string>
    <string name="monthsbtn">3 months</string>
    <string name="seasonbtn">season</string>
    <string name="patchbtn">patch</string>
    <string name="kdagraph_lbl">8.3</string>
    <string name="kda_button">kda</string>
    <string name="high_kda_lbl">high kda</string>
    <string name="low_kda_lbl">low kda</string>
    <string name="by_role_label">by role</string>
    <string name="recent_matches">RECENT MATCHES</string>
    <string name="overview">overview</string>
    <string name="performance">performance</string>
    <string name="matchup">matchup</string>

</resources>
