<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="4"
    android:layout_gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number1"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn1"
        android:layout_row="0"
        android:layout_column="0"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number4"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn4"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number7"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn7"
        android:layout_row="2"
        android:layout_column="0"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number9"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn9"
        android:layout_row="2"
        android:layout_column="2"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number2"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn2"
        android:layout_row="0"
        android:layout_column="1"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number5"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn5"
        android:layout_row="1"
        android:layout_column="1"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number8"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn8"
        android:layout_row="2"
        android:layout_column="1"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number0"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn0"
        android:layout_row="3"
        android:layout_column="1"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number3"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn3"
        android:layout_row="0"
        android:layout_column="2"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number6"
        android:textSize="25dp"
        android:textColor="#cccccc"
        android:id="@+id/btn6"
        android:layout_row="1"
        android:layout_column="2"
        android:background="@android:color/transparent"
        android:padding="2dp"/>

</GridLayout>