<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    android:baselineAligned="false"
    android:background="#231f20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skill_tier_title"
        android:id="@+id/skill_tier_lbl"
        android:textSize="20dp"
        android:gravity="center_vertical"
        android:layout_margin="2dp"
        android:textColor="#cccccc" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skill_tier"
        android:id="@+id/skill_tier"
        android:textSize="30dp"
        android:gravity="center_vertical"
        android:layout_margin="5dp"
        android:textColor="#ffffff" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wins_total"
                android:id="@+id/wins_total"
                android:textSize="30dp"
                android:padding="5dp"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wins_total_lbl"
                android:id="@+id/wins_total_lbl"
                android:textSize="15dp"
                android:padding="5dp"
                android:textColor="#ffffff" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/losses_total"
                android:id="@+id/losses_total"
                android:textSize="30dp"
                android:padding="5dp"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/losses_total_lbl"
                android:id="@+id/losses_total_lbl"
                android:textSize="15dp"
                android:padding="5dp"
                android:textColor="#ffffff" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matches_total"
                android:id="@+id/matches_total"
                android:textSize="30dp"
                android:padding="5dp"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matches_total_lbl"
                android:id="@+id/matches_total_lbl"
                android:textSize="15dp"
                android:padding="5dp"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kda_value"
        android:id="@+id/kda_button"
        android:textSize="20dp"
        android:elevation="10dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:layout_marginBottom="5dp"
        android:textColor="#ffffff"
        android:background="#4b4b4b"
        android:shadowColor="#000000" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_hero_button"
        android:id="@+id/best_hero_button"
        android:textSize="20dp"
        android:elevation="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:paddingRight="15dp"
        android:shadowColor="#000000"
        android:textColor="#ffffff"
        android:background="#4b4b4b" />

</LinearLayout>
