<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="100dp"
    android:layout_height="110dp"
    android:id="@+id/heroImageLayout">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/positionplayed"
        android:gravity="center"
        android:background="#40ffffff"
        android:visibility="gone">
        <RadioButton android:id="@+id/laneplayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/laneplayed"
            android:textSize="20dp"
            android:textColor="@drawable/textcolorselector"
            android:button="@android:color/transparent"/>

        <RadioButton android:id="@+id/jungleplayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/jungleplayed"
            android:textSize="20dp"
            android:textColor="@drawable/textcolorselector"
            android:button="@android:color/transparent"/>
        <RadioButton android:id="@+id/roamplayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/roamplayed"
            android:textSize="20dp"
            android:textColor="@drawable/textcolorselector"
            android:button="@android:color/transparent"/>
    </RadioGroup>


</LinearLayout>