<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    android:gravity="center_horizontal">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/Total_Kills_label"
        android:textColor="#cccccc" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45dp"
        android:text="@string/number0"
        android:textColor="#cccccc"
        android:id="@+id/totalkills"
        android:layout_margin="10dp"/>
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#cccccc"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/game_time_label"
        android:textColor="#cccccc" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45dp"
            android:text="@string/number0"
            android:textColor="#cccccc"
            android:id="@+id/minutestxt"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45dp"
            android:text="@string/timesymbol"
            android:textColor="#cccccc"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45dp"
            android:text="@string/number0"
            android:textColor="#cccccc"
            android:id="@+id/secondstxt"
            android:layout_margin="10dp"/>
    </LinearLayout>





</LinearLayout>


