<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:baselineAligned="false"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/fold_overall">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/overallimage"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IGN"
            android:id="@+id/ign_lbl"
            android:textSize="24dp"
            android:gravity="center_horizontal"
            android:textColor="#26e899"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_tier"
            android:id="@+id/skill_tier"
            android:textSize="12dp"
            android:gravity="center_horizontal"
            android:layout_margin="3dp"
            android:textColor="#ffffff" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_tier_title"
            android:id="@+id/skill_tier_lbl"
            android:textSize="10dp"
            android:gravity="center_horizontal"
            android:textColor="#70ffffff"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_total"
                    android:id="@+id/games_total"
                    android:textSize="18dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_total_lbl"
                    android:textSize="12dp"
                    android:textColor="#70ffffff" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins_total"
                    android:id="@+id/wins_total"
                    android:textSize="18dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins_total_lbl"
                    android:id="@+id/losses_total_lbl"
                    android:textSize="12dp"
                    android:textColor="#70ffffff" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/losses_total"
                    android:id="@+id/losses_total"
                    android:textSize="18dp"
                    android:textColor="#ffffff" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/losses_total_lbl"
                    android:textSize="12dp"
                    android:textColor="#70ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!--
    <ProgressBar
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:id="@+id/rankprogress"
        android:gravity="center_horizontal"
        style="@style/CustomProgressBar"
        android:max="15"
        android:progress="5"
        android:progressDrawable="@drawable/customprogressbar"
        android:minHeight="15dp"
        android:layout_marginTop="15dp" />
    -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/kdaDetail"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kda_value"
                    android:textColor="#ffffff"
                    android:textSize="24dp"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kda_lbl"
                    android:textColor="#70ffffff"
                    android:textSize="12dp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
                    />
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#45ffffff"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/winratioDetail">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/winratioPos"
                    android:textColor="#ffffff"
                    android:textSize="24dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/win_ratio_title"
                    android:textColor="#70ffffff"
                    android:textSize="12dp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
